--- a/centro medico/RDLC/custom/aspe/Factura.rdlc
+++ b/centro medico/RDLC/custom/aspe/Factura.rdlc
@@ -2377,14 +2377,16 @@ OR First(Fields!REFSERIE.Value, "dsFactura") = "MD13"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "MD14" 
 OR First(Fields!REFSERIE.Value, "dsFactura") = "MD15"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "MD16"
-OR First(Fields!REFSERIE.Value, "dsFactura") = "MD17", 
+OR First(Fields!REFSERIE.Value, "dsFactura") = "MD17"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "MD18", 
 "DNI: 22112466J", 
 IIF(First(Fields!REFSERIE.Value, "dsFactura") = "TG" 
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG13" 
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG14" 
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG15"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16"
-OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17", 
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG18", 
 "DNI: 74211891E", "CIF: "+ First(Fields!CIF.Value, "dsClinica")))</Value>
                           <Style>
                             <FontSize>8pt</FontSize>
@@ -2446,13 +2448,15 @@ OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17",
   OR First(Fields!REFSERIE.Value, "dsFactura") = "MD14" 
   OR First(Fields!REFSERIE.Value, "dsFactura") = "MD15"
   OR First(Fields!REFSERIE.Value, "dsFactura") = "MD16"
-  OR First(Fields!REFSERIE.Value, "dsFactura") = "MD17" , " ", 
+  OR First(Fields!REFSERIE.Value, "dsFactura") = "MD17"
+  OR First(Fields!REFSERIE.Value, "dsFactura") = "MD18" , " ", 
  IIF(First(Fields!REFSERIE.Value, "dsFactura") = "TG" 
   OR First(Fields!REFSERIE.Value, "dsFactura") = "TG13"
   OR First(Fields!REFSERIE.Value, "dsFactura") = "TG14" 
   OR First(Fields!REFSERIE.Value, "dsFactura") = "TG15"
   OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16"
-  OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17" , " ", 
+  OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17"
+  OR First(Fields!REFSERIE.Value, "dsFactura") = "TG18" , " ", 
  "Registro Sanitario: 04820"))</Value>
                           <Style>
                             <FontSize>9pt</FontSize>
@@ -2491,14 +2495,17 @@ OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17",
   OR
  First(Fields!REFSERIE.Value, "dsFactura") = "MD16" 
   OR
- First(Fields!REFSERIE.Value, "dsFactura") = "MD17", 
+ First(Fields!REFSERIE.Value, "dsFactura") = "MD17"
+  OR
+ First(Fields!REFSERIE.Value, "dsFactura") = "MD18", 
 "MANUEL DIEZ DIEZ", 
 IIF(First(Fields!REFSERIE.Value, "dsFactura") = "TG"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG13"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG14" 
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG15"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16"
-OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17",  
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG18",  
 "TOMAS GALVAN CAÑIZARES", First(Fields!NOMBRE.Value, "dsClinica")))</Value>
                           <Style>
                             <FontSize>11pt</FontSize>
