--- a/centro medico/RDLC/default/DentalPresupuesto.rdlc
+++ b/centro medico/RDLC/default/DentalPresupuesto.rdlc
@@ -776,7 +776,7 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>OdontTrat_LineasPresupuesto</DataSetName>
-        <Top>2.17664cm</Top>
+        <Top>2.17663cm</Top>
         <Height>0.76522in</Height>
         <Width>7.32621in</Width>
         <Style />
@@ -796,7 +796,7 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox20</rd:DefaultName>
-        <Top>0.42028cm</Top>
+        <Top>0.42027cm</Top>
         <Left>1.94945cm</Left>
         <Height>0.6cm</Height>
         <Width>2.12958cm</Width>
@@ -826,7 +826,7 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox21</rd:DefaultName>
-        <Top>0.42028cm</Top>
+        <Top>0.42027cm</Top>
         <Left>4.11431cm</Left>
         <Height>0.6cm</Height>
         <Width>8.62772cm</Width>
@@ -856,7 +856,7 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox22</rd:DefaultName>
-        <Top>1.16139cm</Top>
+        <Top>1.16138cm</Top>
         <Left>2.79612cm</Left>
         <Height>0.6cm</Height>
         <Width>1.28292cm</Width>
@@ -888,7 +888,7 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>1.12612cm</Top>
+        <Top>1.12611cm</Top>
         <Left>4.07903cm</Left>
         <Height>0.6cm</Height>
         <Width>2.5cm</Width>
@@ -921,7 +921,7 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>Presupuesto</Value>
+                  <Value>= "Presupuesto " &amp; Parameters!Num.Value</Value>
                   <Style>
                     <FontFamily>Tahoma</FontFamily>
                     <FontSize>18pt</FontSize>
@@ -1190,6 +1190,12 @@ FROM d_Presupuesto D
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
+  <ReportParameters>
+    <ReportParameter Name="Num">
+      <DataType>String</DataType>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+  </ReportParameters>
   <Language>en-US</Language>
   <ConsumeContainerWhitespace>true</ConsumeContainerWhitespace>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
